cabal-version:       2.0
name:                vigilant-engine
version:             0.0.0
synopsis:            reports of my finances
description:         reports of my finances
homepage:            https://github.com/gillchristian/vigilant-engine
bug-reports:         https://github.com/gillchristian/vigilant-engine/issues
license:             MIT
license-file:        LICENSE
author:              Christian Gill
maintainer:          gillchristiang@gmail.com
copyright:           2019 Christian Gill
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/gillchristian/vigilant-engine.git

library
  hs-source-dirs:      src
  exposed-modules:     Parsing
                     , Matchers 
                     , Date
                     , Types

  build-depends:       base ^>= 4.12.0.0
                     , regex-compat ^>= 0.95.1
                     , MissingH ^>= 1.4.1.0
                     , aeson ^>= 1.4.2.0
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable vigilant-engine
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.12.0.0
                     , aeson ^>= 1.4.2.0
                     , vigilant-engine
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
